DigicielFull/force-app/main/default/objects/Sponsorship__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sponsorships</relationshipLabel>
    <relationshipName>Sponsorships</relationshipName>
    <type>Lookup</type>
</CustomField>