DigicielFull/force-app/main/default/objects/Sponsorship__c/fields/Approval__c.field-meta.xml
<CustomField>
    <fullName>Approval__c</fullName>
    <formula>CASE( Approval_Process__c ,
&quot;New&quot;,&quot; New&quot; ,
&quot;Pending&quot;, &quot;Pending&quot; +IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;Pending for Approval&quot;, 22, 22),
&quot;Approved&quot;, &quot;Approved&quot; +IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Approved by Manager&quot;, 22, 22),
&quot;Rejected&quot;, &quot;Rejected&quot;+IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Rejected&quot;, 22, 22),
&quot;Recalled&quot;, &quot;Recalled&quot;+IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;Recalled&quot;, 22, 22),
&quot;No answer&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval</label>
    <type>Text</type>
</CustomField>