DigicielFull/force-app/main/default/objects/Sponsorship__c/fields/Number_of_Handset__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Handset__c</fullName>
    <label>Number of Handset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>