DigicielFull/force-app/main/default/objects/Sponsorship__c/fields/TotalValue__c.field-meta.xml
<CustomField>
    <fullName>TotalValue__c</fullName>
    <label>Total Value</label>
    <summarizedField>Promotional_Item__c.Total__c</summarizedField>
    <summaryForeignKey>Promotional_Item__c.Sponsorship__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>